<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroExpense</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="email">Email</string>
    <string name="user_name">Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="signup">Complete Signup</string>
    <string name="login">Sign in with Twitter</string>
    <string name="signup_welcome">Welcome! Please complete your signup with your email.</string>
    <string name="logout">Logout</string>
    <string name="signing">Signing in</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="expense">Expense</string>
    <string name="shared">Shared Bills</string>
    <string name="income">Income</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="sigma">∑</string>
    <string name="you_owe">You Owe</string>
    <string name="others_owe">Others Owe</string>
    <string name="zero_value">$ 0.0</string>
    <string name="title_activity_expense_list">ExpenseListActivity</string>
    <string name="date">Date</string>
    <string name="title_activity_shared_list">SharedListActivity</string>
    
    <string name="value_here">Enter Value here</string>
    <string name="amount">Amount</string>
    <string name="notes">Notes</string>
    <string name="account">Account</string>
    <string name="category">Category</string>
    <string name="payee">Vendor</string>
    <string name="payer">Source</string>
    <string name="paymentMode">Mode</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="ExpenseLabel">Expense</string>
    <string name="IncomeLabel">Income</string>
    <string name="transactionSubmit">Submit</string>
	<string name="more">More</string>
	<string name="less">Less</string>
	<string name="share_expenses">Share</string>
	<string name="hint_friends_email">Enter Friends Emails</string>
	<string name="enter_email">Eg., a@gmail.com, b@gmail.com</string>
	<string name="pay">Pay</string>
	<string name="add">Add</string>
    

</resources>
