<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/burgundy" />

    <LinearLayout
        android:id="@+id/llLoading"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/tvSignIn"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:visibility="invisible" >

        <ProgressBar
            android:id="@+id/loginSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/tvSigning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signing"
            android:textColor="@color/insta_blue" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/t_blue"
        android:onClick="loginToTwitter"
        android:padding="8dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:visibility="visible" />

</RelativeLayout>