<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sand"
    tools:context=".OverviewActivity" >

    <LinearLayout
        android:id="@+id/llExpenseOv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_margin="5dp"
        android:onClick="showExpenseList"
        android:background="@drawable/round_c_border"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tvExpenseOv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:text="@string/expense"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvExpenseAmtOv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:gravity="right"
            android:text="@string/zero_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llIncomeOv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llExpenseOv"
        android:onClick="showIncomeList"
        android:layout_margin="5dp"
        android:background="@drawable/round_c_border"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tvIncomeOv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/green"
            android:text="@string/income"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvIncomeAmtOv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/green"
            android:text="@string/zero_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/llSharedOv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llIncomeOv"
        android:layout_margin="5dp"
        android:onClick="showSharedList"
        android:background="@drawable/round_c_border"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tvSharedOv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/s_orange"
            android:text="@string/shared"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvSharedAmtOv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/s_orange"
            android:gravity="right"
            android:text="@string/zero_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llYouOweOv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llSharedOv"
        android:onClick="showPayeeList"
        android:layout_margin="5dp"
        android:background="@drawable/round_c_border"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tvYouOweOv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/you_owe"
            android:textColor="@color/red"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvYouOweAmtOv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/red"
            android:gravity="right"
            android:text="@string/zero_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llOthersOweOv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/llYouOweOv"
        android:onClick="showPayerList"
        android:layout_margin="5dp"
        android:background="@drawable/round_c_border"
        android:orientation="horizontal"
        android:padding="15dp" >

        <TextView
            android:id="@+id/tvOthersOweOv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:layout_weight="1"
            android:text="@string/others_owe"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvOthersOweAmtOv"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:textColor="@color/green"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/zero_value"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</RelativeLayout>