<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_c_border"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tvTransDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|left"
            android:background="@drawable/blue_gradient"
            android:onClick="onProfileClick"
            android:paddingBottom="1dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingTop="1dp"
            android:text="@string/date"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:gravity="left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTransVendor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="Vendor" />

            <TextView
                android:id="@+id/tvTransType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                android:gravity="bottom"
                android:text="Type"
                android:textSize="@dimen/created_at" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llTrans"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:gravity="right"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvTransAmt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="7dp"
                android:text="@string/zero_value" />

            <TextView
                android:id="@+id/tvTransAcnt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="3dp"
                android:gravity="bottom"
                android:text="Account"
                android:textSize="@dimen/created_at" />
        </LinearLayout>

        <!-- this is the expandable view that is initially hidden and will slide out when the more button is pressed -->

    </LinearLayout>

    <LinearLayout
        android:id="@+id/expandable"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="right"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/tvTransAction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:onClick="onProfileClick"
            android:background="@drawable/round_small_border"
            android:paddingTop="3dp"
            android:paddingBottom="3dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/pay"
            android:textColor="@color/white" />

        <!-- put whatever you want in the expandable view -->

    </LinearLayout>

</LinearLayout>